--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:24:00 AM</p>
+    <p class="lastupdate">09/05/2020 10:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">84.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">84.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">84.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.2&#176;F</td>
+        <td class="data">55.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.957 inHg (0.001)</td>
+        <td class="data">29.960 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:56 AM">
-            83.5</span><br/>
+          <span title="10:28:34 AM">
+            84.5</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:56 AM" class="hival">
-            83.5</span>
+          <span title="10:28:34 AM" class="hival">
+            84.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:00 AM">
-            55.4</span><br/>
+          <span title="10:28:34 AM">
+            56.1</span><br/>
           <span title="06:23:41 AM">
             49.4</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="10:16:54 AM">
-            38</span>
+          <span title="10:28:50 AM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 19 hours, 37 minutes</td>
+      <td class="data">3 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 19 hours, 37 minutes</td>
+      <td class="data">3 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
