--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:34:00 AM</p>
+    <p class="lastupdate">09/05/2020 10:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.6&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">34%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.000)</td>
+        <td class="data">29.957 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.6&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:40 AM">
-            85.7</span><br/>
+          <span title="10:38:58 AM">
+            86.7</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:40 AM" class="hival">
-            85.7</span>
+          <span title="10:38:58 AM" class="hival">
+            86.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="10:30:34 AM">
-            36</span>
+          <span title="10:36:32 AM">
+            34</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 19 hours, 47 minutes</td>
+      <td class="data">3 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 19 hours, 47 minutes</td>
+      <td class="data">3 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
