--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:54:00 AM</p>
+    <p class="lastupdate">09/05/2020 10:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.3&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.957 inHg (-0.004)</td>
+        <td class="data">29.954 inHg (-0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:53:50 AM">
-            88.9</span><br/>
+          <span title="10:58:48 AM">
+            89.7</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:53:50 AM" class="hival">
-            88.9</span>
+          <span title="10:58:48 AM" class="hival">
+            89.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="10:49:20 AM">
-            31</span>
+          <span title="10:57:54 AM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          3
+          4
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 20 hours, 7 minutes</td>
+      <td class="data">3 days, 20 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 20 hours, 7 minutes</td>
+      <td class="data">3 days, 20 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
