--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 11:44:00 AM</p>
+    <p class="lastupdate">09/05/2020 11:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">95.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">95.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">95.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.7&#176;F</td>
+        <td class="data">51.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">24%</td>
+        <td class="data">23%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.941 inHg (-0.020)</td>
+        <td class="data">29.943 inHg (-0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WNW (292&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.9&#176;F</td>
+        <td class="data">80.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:43:54 AM">
-            95.2</span><br/>
+          <span title="11:46:26 AM">
+            95.4</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:43:54 AM" class="hival">
-            95.2</span>
+          <span title="11:46:26 AM" class="hival">
+            95.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="11:37:10 AM">
-            24</span>
+          <span title="11:45:44 AM">
+            23</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:27:25 AM">
-            7</span><br/>
-          9
+          <span title="11:49:00 AM">
+            8</span><br/>
+          15
         </td>
         <td class="data new_row hilo_week">
           <span title="04:15:00 PM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 20 hours, 57 minutes</td>
+      <td class="data">3 days, 21 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 20 hours, 57 minutes</td>
+      <td class="data">3 days, 21 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
